<resources>
    <string name="app_name">Ebira People</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">The Ebiras like all other nationalities in the world have their own
        heroes and heroines. The Ebira speaking people are scattered in four locations in Nigeria.  </string>
    <string name="underline_ebira"><u>Ebira</u></string>
    <string name="underline_people"><u>People</u></string>
    <string name="get_started">Get Started</string>
    <string name="learn_more">Learn More</string>
    <string name="next">Next</string>
    <string name="second_onboarding_text">Become a pro in our norms and culture.</string>
    <string name="first_message">Get to know our Royal History.</string>
    <string name="last_onboarding_text">Have a view of amazing places Like the palace of the Ohinoyi of Ebira Land</string>
    <string name="good_mornig"> Nyene</string>
    <string name="good_afternoon"> Nyari odu</string>
    <string name="good_evening"> Nyari oruva </string>
    <string name="good_night">Aduhuo, Avuru ka wa suara boraanini</string>
    <string name="sleeping">You\'re supposed to be sleeping </string>
    <string name="beautiful_places">Beautiful Places</string>
    <string name="hi">Tao </string>
    <string name="search_area_text">Search</string>
    <string name="history">History</string>
    <string name="culture">Culture</string>
    <string name="people">People</string>
    <string name="entertainment">Entertainment</string>
    <string name="history_of_ebira_people">Ane Ebira, we are an ethno-linguistic group in Nigeria. Many of us are from Kogi State, Kwara State, Nasarawa State, Federal Capital Territory, Abuja, and Edo State. Okene is said to be our administrative centre, the Ebira-speaking people in Kogi state, are not far from the Niger-Benue confluence. Origin of the Ebiras An elder beats the Agidibo to salute the spirits (Photo by EbiraView) Ebira Tao is the largest of the several Ebira groups found in about 8 states of Nigeria including the Federal Capital Territory (FCT). Our sister groups are Ebira Koto and Ebira Mozum (Kogi state), Ebira Panda, Ebira Oje/Toto (Nassarawa state), Ebira Etuno (Edo state), Ebira Agatu (Benue state) Ebira Oloko (Ondo/Oyo/Osun states). The history of our origin were those compiled from Attah Omadivi and other Ebiran Clan Heads by the British colonial administrators in early 20th century. Our elders, through oral tradition, trace our descent to Wukari (in the present Taraba state) where we were an integral part of the Kwararafa confederation. In about 1680 AD, our ancestors (along with the Idoma and Igala) migrated out of Wukari over a chieftaincy dispute. Our people later split into various groups and settled in different locations between 1680 and 1750 AD. We Ebira Tao first sojourned with the Igalas at Idah but later crossed the River Niger and settled at Ebira Opete located in the vicinity of Upake in Ajaokuta LGA. Our \'father\' of Ebira Tao who led us to this premier settlement in Ebiraland was Itaazi. Itaazi had five (5) sons who all later migrated from Ebira Opete and were the founders of the various districts in Ebiraland. The children and the districts they founded are Adaviruku/Ohizi (Adavi), Ododo (Okehi), Obaji (Eyika), Uga (Okengwe) and Ochuga/Onotu (Ihima). His daughter named Ohunene settled in Eganyi district. Members of the various clans in Ebiraland are descendants of the children of Itaazi. Ohizi had five children who are progenitors of the five traditional Adavi clans named after them. These are upopo-uvete (Apasi), Uka, Idu (Aniku), Adeyika and Uhwami. A migrant group from Eganyi known as Ezi-Onogu clan is also found in Adavi. The sons of Ododo who are the ancestors of Okehi clans were Okovi Oviri and Enwgukonyai. Obaji the founder of Eika had ten children named Ohiaga, Iyewe, Avassa, Ehemi, Anchi, Epoto, Egiri, Ubobo, Ogu and Eyire. Uga of Okengwe had two sons whose children constitute the present Okovi and Agada group of clans. Due to a sizeable concentration of other Ebira clans in Okengwe district, they formed a socio-political coalition known as Ada-ehi. Ochuga had six children and their descendants make up the six clans in Ihima. These are Emani, Oha/Idu, Ohueta, Ure, Ohongwa and Odumi. The seventh clan is Akuta who migrated from Okengwe. Though Itaazi\'s daughter named Ohunene was the founder of Eganyi, not all the clans there are descended from her. Eganyi clans are Ede, Esugu, Eheda, Ogu, Onoko, Idu, Anavapa and Ogodo. The Aningere who are skilled craftsmen are found in all districts. They are, however, more concentrated in Okengwe and Adavi districts. We constitutes one of the ethnic groups in the Middle Belt zone of Nigeria. But, however, did not evolve a centralized form of leadership until the advent of the British colonial authorities, which brought together the various Ebira clans under the leadership of Attah Omadivi in 1902. therefore, the year 1902 marked the evolution of a monarchical form of administration and the gradual development of central administration in Ebiraland. Location and size of the Ebira community Ebiraland is a small hilly inland area that stretches roughly for twenty three kilometres west of the Niger at Ajaokuta and thirty two kilometers southwest of the Niger-Benue confluence. The range of hills occasionally rises to six hundred and sixty seven metres above sea level. Ebiraland, the home of Ebira Tao, is in the central senatorial District of Kogi state. It has a landmass of 3,426 km2. The 1991 national census puts the population of the area 722,032. Another national head count was undertaken in 2006. The provisional figure of 884,396 released by the National Population Commission (NPC) is being disputed. It is distributed as follows: Okene LGA (320,260), Adavi LGA (202,194), Okehi LGA (199,999), Ajaokuta LGA (122,321) and Ogori Magongo LGA (39,622). Our communities which started as tiny villages have joined together as near towns, gradually and progressively expanding towards one another with Okene as a city in modern times. Ebiraland thus presents an aerial view of one huge near urban settlement with intervening barriers. Our Culture and Administration We are republican by nature, outspoken and very hard working. Farming and cloth-weaving are occupations for which Ebiras are well known. we are presently spread in five Local Government Areas of Kogi state namely: Adavi, Okene, Okehi, Ajaokuta and Ogori-magongo. A sizeable number is of our people are found in Lokoja Local Government Area, Ondo, Ogun, and Oyo states. Our paramount ruler is called Ohinoyi of Ebiraland. The Pre-Colonial Ebira community was essentially segmentary. It consisted of five principal clans among several others, namely, Okengwe, Eika, Okehi, Adavi, and Ihima. The respective priests (heads) of these clans were known as Ohindase, Adeika, Ohiomahi, Asema and Obonbanyi. Each clan was selfgoverning and did not regard any other as superior to it. Significantly, the clan was the main unit of political organization. The post of the clan head was normally conferred on the oldest living male member of the clan. His religious duties and disciplinary powers were, however, limited to his own family. His political influence was quite small and although he presided over the meetings of his clan, his judgement was determined largely by the consensus of opinion of the elders. The administration of all the clan heads constituting a community in Ebiraland lay in the hands of the elders, influential individuals and the chief priest (Ohinoyi). Economically, the clan head held in trust for the clan, part of the income from all the clan lands, such as the produce from palm oil and locust bean trees,during the pre-colonial period. Also, the leg of whatever game that was killed was given to him, which he shared with the kindred heads.We so much cherish our traditional festivities in spite of the infiltration of some negative tendencies in recent times. Our people were used to coming together in the face of crisis. Thus, in moments of war, we come together as a united front to ward off the incursion of the enemy. Indeed, our people have built strong confidence inour warfare and ‘superior’ weapons – bows and arrows. The invasion of Ebira country by the Nupe (1865-1900) did not make them doubt our military superiority. Our Nupe invaders were successfully resisted by our people under our amiable warrior leader who later became Attah Omadivi. The Nupe invasion was organized in the form of raids for slaves. But the our people were soon to realize that our warfare and ‘superior’ weapons could not defend us against the British super superior weaponry in 1902. In 1895, an outstation was placed at Kabba by the Royal Niger Company and a fort was built there by Captain Turner, an officer attached to the Niger Constabulary. On 1st January, 1900, Frederick Lugard took over the government of Northern Nigeria from the Royal Niger Company and hoisted the British flag at Lokoja. Kabba was formed into a province which included the Akoko, Kukuruku and Ebira countries, and was administered from Lokoja, which was also the headquarters of the protectorate of Northern Nigeria, with Sir William Wallace as its first Resident. In 1902, a small military escort led by Mr. Malcom and Lt. F.F.W.Byng-Hall sent into Ebira country was seen by the our people as an incursion. They refused to meet with the British demand for the supply of food, seeing this as a direct insult on their persons. Mr. Malcom and his party, outnumbered, were attacked with arrows by the Ebira and escaped by a night march to Kabba, arriving the next day. The British soldiers used this as casus belli and marched on them with fire arms. The Ebira country was subjugated and pacified. The resident in Ebiraland described the result of the expedition asfollows: “The Ebira were no doubt severely punished during the expedition and I now find them very afraid of the whiteman” With the defeat of our people, the British then imposed their rule on us, politically uniting the various clans by force. During the British occupation of our land, Agidi, one of the notable personalities among the Ebira, led an armed resistance against any form of British rule. In 1902, he and his men attacked the small British group led by Mr. Malcom, the political officer. Who barely escaped death. After this event, Ebiraland was declared a land of ‘savages’ and Mr Malcom ordered a detachment of the West African Frontier Force (WAFF) to sit among our people in order to ‘tame’ them. In 1903, a punitive expedition under Major Marsh, Lieutenants Sparrenbarg, Moran, Byng-Hall, Gallway, Smith, Oldman and Captain Lewis, was organized to call Agidi to order and to establish permanent peace in Ebiraland. In this expedition, the British received the whole hearted cooperation of Omadivi, who was the representative of Ohindase Abogunde – the chief priest at the time. Omadivi, like Ohindase, was from the Okengwe clan. Omadivi supplied vital information, most especially on how to capture Agidi who was his political rival. In fact, both Omadivi and Agidi were notable personalities or influential individuals in the Ebira of that time. While the former was loyal to the Chief priest, the latter was not. By 1904, Ebiraland was fully pacified and Mr. Morgan, the Resident of Kabba province, was able to say with confidence that the Ebira people now feared the ‘‘whiteman” and were at “peace with each other”.</string>
    <string name="p2">ODODO AND OBAJI</string>
</resources>