<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_bgrd"
    tools:context=".UI.OnboardingScreen.WelcomeScreen.WelcomeScreen">

    <!-- get Started button -->




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="148dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/underline_ebira"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/underline_people"
        android:textColor="#FFA700"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/muli_light"
        android:text="@string/welcome_text"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@drawable/onboarding_screen_btn_bgrd"
        android:orientation="horizontal"
        android:gravity="center"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:drawableRight="@drawable/arrow"
            android:fontFamily="@font/muli_bold"
            android:textColor="@android:color/white"
            android:text="@string/get_started"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
